--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Demo learning</title>
 </head>
 <body>
-    Hi I am akansha
+    Hi I am akansha!!
+    I am learning React JS, Developing a website from scratch! 
+    Want to learn more and create some cool projects!!
 </body>
 </html>
