--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     Hi I am akansha!!
     I am learning React JS, Developing a website from scratch! 
     Want to learn more and create some cool projects!!
+
+
+    I m working on some CLI apps 
 </body>
 </html>
